fix: - unknown test log - frpc not installed status - refresh button behaviour
add: Makefile luci title

--- a/luasrc/view/sakurafrp/list_banner.htm
+++ b/luasrc/view/sakurafrp/list_banner.htm
@@ -5,6 +5,10 @@
     const stopPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_stop")%>'
     function refresh() {
         XHR.get(refreshPath, null, null);
+
+        setTimeout(function (){
+            location.reload()
+        }, 2000)
     }
 
     function restart() {
