--- a/luasrc/view/sakurafrp/frpc_banner.htm
+++ b/luasrc/view/sakurafrp/frpc_banner.htm
@@ -1,17 +1,29 @@
 <script type="application/javascript">
-    function luciGet(path, refresh) {
-        let url = `<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "${path}")%>`
-        return XHR.get(url, null, function () {
-            if (refresh) {
-                location.reload()
-            }
-        });
+    const stopPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_stop")%>'
+    const restartPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_restart")%>'
+    const forceStopPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_force_stop")%>'
+    const uninstallPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_uninstall")%>'
+
+    function stop() {
+        XHR.get(stopPath, null, null);
+    }
+
+    function restart() {
+        XHR.get(restartPath, null, null);
+    }
+
+    function forceStop() {
+        XHR.get(forceStopPath, null, null);
+    }
+
+    function uninstall() {
+        XHR.get(uninstallPath, null, null);
     }
 </script>
 
 <div style="text-align: center">
-    <input class="btn cbi-button cbi-button-apply" type="button" onclick="luciGet('frpc_stop')" value="<%:Stop Frpc%>" />
-    <input class="btn cbi-button cbi-button-apply" type="button" onclick="luciGet('frpc_stop')" value="<%:Restart Frpc%>" />
-    <input class="btn cbi-button cbi-button-apply" type="button" onclick="luciGet('frpc_force_stop')" value="<%:Force Stop Frpc%>" />
-    <input class="btn cbi-button cbi-button-apply" type="button" onclick="luciGet('frpc_uninstall', true)" value="<%:Uninstall Frpc%>" />
+    <input class="btn cbi-button cbi-button-apply" type="button" onclick="stop()" value="<%:Stop Frpc%>" />
+    <input class="btn cbi-button cbi-button-apply" type="button" onclick="restart()" value="<%:Restart Frpc%>" />
+    <input class="btn cbi-button cbi-button-apply" type="button" onclick="forceStop()" value="<%:Force Stop Frpc%>" />
+    <input class="btn cbi-button cbi-button-apply" type="button" onclick="uninstall()" value="<%:Uninstall Frpc%>" />
 </div>
