add: - reset function - logout update

--- a/luasrc/view/sakurafrp/frpc_banner.htm
+++ b/luasrc/view/sakurafrp/frpc_banner.htm
@@ -3,6 +3,7 @@
     const restartPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_restart")%>'
     const forceStopPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_force_stop")%>'
     const uninstallPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "frpc_uninstall")%>'
+    const resetPath = '<%=luci.dispatcher.build_url("admin", "services", "sakurafrp", "reset_plugin")%>'
 
     function stop() {
         XHR.get(stopPath, null, null);
@@ -19,11 +20,16 @@
     function uninstall() {
         XHR.get(uninstallPath, null, null);
     }
+
+    function reset() {
+        XHR.get(resetPath, null, null);
+    }
 </script>
 
 <div style="text-align: center">
     <input class="btn cbi-button cbi-button-apply" type="button" onclick="stop()" value="<%:Stop Frpc%>" />
     <input class="btn cbi-button cbi-button-apply" type="button" onclick="restart()" value="<%:Restart Frpc%>" />
     <input class="btn cbi-button cbi-button-apply" type="button" onclick="forceStop()" value="<%:Force Stop Frpc%>" />
-    <input class="btn cbi-button cbi-button-apply" type="button" onclick="uninstall()" value="<%:Uninstall Frpc%>" />
+    <input class="btn cbi-button cbi-button-reset" type="button" onclick="uninstall()" value="<%:Uninstall Frpc%>" />
+    <input class="btn cbi-button cbi-button-reset" type="button" onclick="reset()" value="<%:Reset%>" />
 </div>
